# meridian-rust

./: .gitignore  ACCEPTANCE-REPORT-2026-03-12.md  CHANGELOG.md  Cargo.toml  PARITY.md  README.md  WHITE-PAPER-ADDENDUM-2026-03-12.md  docker-compose.yml  drawbridge-flowchart.dot  meridian-ecosystem.dot  meridian-flowchart.dot  meridian-whitepaper.html  pmi-workflow-builder-flowchart.dot
.github/workflows/: deploy.yml
meridian/: .gitignore  Cargo.toml
meridian-mcp/: Cargo.toml  README.md
meridian-mcp/src/: client.rs  config.rs  main.rs  tools.rs
meridian/benches/: gis_bench.rs
meridian/migrations/: 001_create_operations_log.sql  002_create_used_signatures.sql
meridian/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
meridian/src/billing/: mod.rs  solana_pay.rs  x402.rs
meridian/src/data/: epsg.json
meridian/src/gis/: buffer.rs  clip.rs  combine.rs  convert.rs  dissolve.rs  mod.rs  raster.rs  reproject.rs  schema.rs  topology.rs  transform.rs  vectorize.rs
meridian/src/middleware/: rate_limit.rs  request_id.rs
meridian/src/routes/: batch.rs  combine.rs  convert.rs  epsg.rs  export_jgw.rs  georef.rs  gis.rs  health.rs  mod.rs  package.rs  pdf.rs  plss.rs  raster.rs  reclassify.rs  schema.rs  topology.rs  transform.rs  vectorize.rs
meridian/tests/: load_test.rs  payment_integration.rs
reference/: landing-page-brief.md
reference/app/: ratelimit.py
test-fixtures/: README.md  clip_mask.geojson  lines_wgs84.geojson  parcels_wgs84.dbf  parcels_wgs84.geojson  parcels_wgs84.shp  parcels_wgs84.shx  point_wgs84.geojson  roads_wgs84.dbf  roads_wgs84.shp  roads_wgs84.shx  utm10n_points.geojson
tools/: generate_epsg_db.py
